--- a/styles/architects.css
+++ b/styles/architects.css
@@ -8,3 +8,118 @@
   font-weight: 400;
   font-style: normal;
 }
+.display-flex{
+       display: flex;
+
+}
+/* for dark-02 */
+.text-grey{
+       color: #424242;
+}
+/* for dark-03 */
+.text-lightgrey , .banner-description{
+       color: #727272;
+}
+.bg-light{
+       background-color: rgba(255, 144, 14, 0.1);
+}
+.navbar{
+       justify-content: space-between;
+       align-items: center;
+}
+.nav-item{
+       list-style: none;
+       margin-right: 30px;
+}
+.nav-link{
+       text-decoration: none;
+       font-weight: 500px;
+
+}
+.brand{
+       /* margin-left: 228px; */
+       font-weight: 700;
+       font-size: 3rem;
+}
+.nav-links{
+       /* margin-right: 240px; */
+}
+.navbar , .banner{
+       max-width: 1343px;
+       margin: 0 auto;
+       max-height: 2321px;
+}
+/* banner related styles */
+.banner-container{
+       max-width: 870px;
+       margin: 0 auto;
+       text-align: center;
+}
+.banner-title{
+       font-size: 4rem;
+       font-weight: 700;
+}
+.banner-description{
+       font-size:1rem;
+}
+.btn-primary{
+       background-color: #FF900E;
+       color: white;
+       padding: 20px 24px;
+       font-size: 1.25rem;
+       font-weight: 600;
+       margin-bottom: 50px;
+       border: none;
+       border-radius: 5px;
+}
+.main{
+       max-width: 1440px;
+       margin: 0 auto;
+
+}
+main > section{
+       margin-top: 130px;
+}
+.banner-img{
+       width: 100%;
+}
+/* images and features related styles */
+
+
+/* responsive media quary */
+@media screen  and  (max-width:576px) {
+       
+       .navbar, .nav-links{
+              flex-direction: column;
+       }
+}
+.team-image-container{
+       margin-left: 200px;
+       display: grid;
+       grid-template-columns: repeat(2 , 1fr);
+       gap: 20px;
+       
+}
+.our-features{
+       margin-top: 200px;
+       margin-left: 75px;
+       width: 537px;
+       height: 304px;
+}
+.feature-title{
+       font-size: 2.8rem;
+       font-weight: 700px;
+}
+#Quick{
+       font-weight: 500px;
+
+}
+
+
+
+
+
+       
+       
+       
+
