--- a/styles/architects.css
+++ b/styles/architects.css
@@ -89,8 +89,11 @@ main > section{
 /* responsive media quary */
 @media screen  and  (max-width:576px) {
        
-       .navbar, .nav-links{
+       .navbar, .nav-links,.our-features{
               flex-direction: column;
+       }
+       .team-image-container{
+              grid-template-columns: repeat(1, 1fr);
        }
 }
 .team-image-container{
@@ -106,13 +109,16 @@ main > section{
        width: 537px;
        height: 304px;
 }
-.feature-title{
+.section-title{
        font-size: 2.8rem;
        font-weight: 700px;
 }
 #Quick{
        font-weight: 500px;
 
+}
+.text-primary{
+       color: #FF900E;
 }
 
 
