added the files

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -87,15 +87,7 @@ main > section{
 
 
 /* responsive media quary */
-@media screen  and  (max-width:576px) {
-       
-       .navbar, .nav-links,.our-features{
-              flex-direction: column;
-       }
-       .team-image-container{
-              grid-template-columns: repeat(1, 1fr);
-       }
-}
+
 .team-image-container{
        margin-left: 200px;
        display: grid;
@@ -120,12 +112,50 @@ main > section{
 .text-primary{
        color: #FF900E;
 }
-
-
+/* some facts related styles */
+.some-facts{
+       margin-left: 200px;
+}
+.facts-container{
+       display: grid;
+       grid-template-columns: repeat(4 , 1fr);
+}
+.fact-card{
+       border: 1px solid #FF900E;
+       width: 240px;
+       height: 240px;
+       border-radius: 8px;
+       text-align: center;
+       justify-content: center;
+       align-items: center;
+}
+.fact-number{
+       font-size: 2.8rem;
+       font-weight: 600px;
+       margin-top: 5px;
+       margin-bottom: 10px;
+}
+.fact-name{
+       font-size: 1.25rem;
+       font-weight: 600px;
+       margin-top: 5px;
+}
+.fact-description{
+       max-width: 540px;
+       margin-bottom: 100px;
+}
 
 
 
        
        
+    @media screen  and  (max-width:576px) {
        
+       .navbar, .nav-links,.our-features{
+              flex-direction: column;
+       }
+       .team-image-container{
+              grid-template-columns: repeat(1, 1fr);
+       }
+}   
 
