--- a/styles/architects.css
+++ b/styles/architects.css
@@ -142,7 +142,23 @@ main > section{
 }
 .fact-description{
        max-width: 540px;
-       margin-bottom: 100px;
+       margin-bottom: 80px;
+}
+/* sponser related styles */
+.sponser-info{
+       max-width: 540px;
+       margin-left: 700px  ;     
+       /* text-align: center; */
+       text-align: center;
+}
+.sponser-companies{
+       display: grid;
+       grid-template-columns: repeat(5, 1fr);
+       margin-left: 200px;
+       gap: 10px;
+}
+.sponser-companies img{
+       filter: grayscale(100)
 }
 
 
@@ -154,8 +170,17 @@ main > section{
        .navbar, .nav-links,.our-features{
               flex-direction: column;
        }
-       .team-image-container{
+       .team-image-container, 
+       .facts-container,
+       .sponser-companies{
               grid-template-columns: repeat(1, 1fr);
+       }
+       .facts-container , .sponser-companies{
+              justify-content: center;
+              gap: 24px;
+       }
+       .our-features{
+              margin-left: 20px;
        }
 }   
 
